horizontal scroll fixed in modal

--- a/ui.frontend/src/main/webpack/components/content/core-modal/v1/modal/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-modal/v1/modal/style.scss
@@ -34,3 +34,7 @@
       padding: 0 2px;
    }
 }
+
+.sl-modal .modal-dialog .modal-body {
+   overflow-x: hidden;
+}
